Fix gap in hierarchy lines

--- a/app/src/scripts/react/views/Storage/sections/Filesystem/Dataset.less
+++ b/app/src/scripts/react/views/Storage/sections/Filesystem/Dataset.less
@@ -5,12 +5,13 @@
 
 .dataset {
   background-color: #F8F8F8;
+  position: relative;
 
   .dataset {
     padding-left: 32px;
 
-    .dataset-toolbar:before,
-    .dataset-toolbar:after {
+    &:before,
+    .dataset-toolbar:before {
       // Create a "|-" separator for each child dataset to show its relationship
       // with parent datasets
       content: "";
@@ -18,11 +19,10 @@
       position: absolute;
       height: 50%;
       width: 10px;
-      right: 100%;
+      left: -15px;
       box-sizing: initial;
       border: #999999 solid 0;
       border-left-width: 1px;
-      margin-right: 8px;
     }
 
     .dataset-toolbar:before {
@@ -32,13 +32,16 @@
       top: 0;
     }
 
-    .dataset-toolbar:after {
+    &:before {
       // Creates the bottom half of the "|"
-      padding-bottom: @dataset-basis;
-      top: 50%;
+      right: auto;
+      left: 15px;
+      height: 100%;
+      margin-top: @dataset-basis;;
+      margin-left: 2px; // Not sure why this is needed, but it is
     }
 
-    &:last-child > .dataset-toolbar:after {
+    &:last-child:before {
       // Don't show the bottom part of the "|" for the last child, since there's
       // no "next" child dataset
       display: none;
